# stdlite

./: .bumpversion.cfg  .clang-tidy  .gitignore  .gitmodules  404.html  README.md  doxide.yaml  index.html  meson.build  meson_options.txt  mkdocs.yaml
.github/workflows/: docs.yml  tests.yml
API/: index.html
API/app/: index.html
API/app/app_main/: index.html
API/app/log_property/: index.html
API/app/requests/: index.html
API/app/requests/stdl_lrv_request_/: index.html
API/app/requests/stdl_operator_/: index.html
API/app/requests/stdl_response_request_/: index.html
API/app/requests/stdl_response_request_/stdl_lrv_request_/: index.html
API/app/requests/stdl_response_request_/stdl_response_request_/: index.html
API/app/responses_handler/: index.html
API/app/responses_handler/stdl_responses_handler_/: index.html
API/app/timespec/: index.html
API/app/user_input_handler/: index.html
API/app/user_input_handler/stdl_method_/: index.html
API/app/user_input_handler/stdl_source_type_/: index.html
API/app/user_input_handler/stdl_user_input_handler_/: index.html
API/basis/: index.html
API/basis/stdl_basis_/: index.html
API/context/: index.html
API/context/stdlite_context_/: index.html
API/helpers/: index.html
API/logging/: index.html
API/logging/stdl_error_code_/: index.html
API/property/: index.html
API/response/: index.html
API/utilities/: index.html
API/utilities/base_parser/: index.html
API/utilities/fchk_parser/: index.html
API/utilities/fchk_parser/stdl_basis_data_/: index.html
API/utilities/lexer/: index.html
API/utilities/lexer/stdl_lexer_/: index.html
API/utilities/lexer/stdl_token_type_/: index.html
API/utilities/matrix/: index.html
API/utilities/molden_parser/: index.html
API/utilities/permutations/: index.html
API/utilities/permutations/stdl_permutation_/: index.html
API/utilities/permutations/stdl_permutation_/stdl_permutation_/: index.html
API/utilities/qexp/: index.html
API/wavefunction/: index.html
API/wavefunction/stdl_wavefunction_/: index.html
app/: app.c  app.h  index.html  log_property.c  log_property.h  main.c  meson.build  requests.c  requests.h  response_requests.c  response_requests.h  responses_handler.c  responses_handler.h  timer.h  user_input.c  user_input.h  user_input_handler.c  user_input_handler.h
app/tests/: meson.build  tests_suite.h  tests_suite_responses_handler.c  tests_suite_user_input.c  tests_suite_user_input_handler.c
app/tests/test_files/: context_water_sto3g.h5  test.toml  wrong.toml  wrong2.toml
assets/: esa.tex  example.toml  example2.toml  water.molden
contributing/: index.html
docs/: app.md  build.md  contributing.md  index.md  theory.md  tutorial.md
docs/assets/: activity_diagram_API.odg  biblio.bib  esa.tex  example.toml
docs/assets/ouput_H5/: 1_overview.odg  2_wavefunction.odg  3_basis.odg  4_context.odg  5_responses.odg  6_properties.odg
docs/includes/: API.md  basis.md  experimental_quantity.md  fchk_parser.md  molden_parser.md
include/: dummy.h  stdlite.h
include/stdlite/: basis.h  context.h  errors.h  helpers.h  integrals.h  linear_algebra.h  logging.h  matrix.h  property.h  property_tensor.h  response.h  wavefunction.h
include/stdlite/utils/: base_parser.h  experimental_quantity.h  fchk_parser.h  lexer.h  matrix.h  molden_parser.h  permutations.h  utils.h
includes/API/: index.html
includes/basis/: index.html
includes/experimental_quantity/: index.html
includes/fchk_parser/: index.html
includes/molden_parser/: index.html
search/: search_index.json
src/: basis.c  context.c  dummy.c  errors.c  integrals.c  logging.c  matrix.c  meson.build  property.c  property_tensor.c  response.c  wavefunction.c
src/utils/: base_parser.c  experimental_quantity.c  fchk_parser.c  lexer.c  matrix.c  molden_parser.c  permutations.c
subprojects/: argtable.wrap  libcint.wrap  tomlc99.wrap  unity.wrap
subprojects/packagefiles/argtable/: meson.build
subprojects/packagefiles/libcint/: meson.build
subprojects/packagefiles/tomlc99/: meson.build
tests/: helpers.c  meson.build  test_dummy.c  tests_suite.h  tests_suite_basis.c  tests_suite_context.c  tests_suite_integrals.c  tests_suite_property.c  tests_suite_property_tensor.c  tests_suite_response.c  tests_suite_utils_base_parser.c  tests_suite_utils_fchk_parser.c  tests_suite_utils_lexer.c  tests_suite_utils_molden_parser.c  tests_suite_utils_permutations.c  tests_suite_wavefunction.c
tests/test_files/: He.molden  chiral_sto3g.molden  test.toml  water_631g.fchk  water_631g.molden  water_631gd.fchk  water_631gdf.fchk  water_631gdf.molden  water_631gdf_sph.fchk  water_sto3g.fchk  water_sto3g_dalton.molden
theory/: index.html
tutorial/: index.html
