
option(
    'la_backend',
    type: 'combo',
    value: 'default',
    choices: ['default', 'openblas', 'mkl'],
    description : 'linear algebra backend'
)

option(
    'openmp',
    type: 'boolean',
    value: true,
    description: 'Use OpenMP',
)

option(
    'tests',
    type: 'boolean',
    value: true,
    description: 'Include tests',
)