
option(
    'la_backend',
    type: 'combo',
    value: 'default',
    choices: ['default', 'openblas+lapack', 'openblas64+lapack64', 'mkl', 'custom'],
    description : 'linear algebra backend'
)

option(
    'openmp',
    type: 'boolean',
    value: true,
    description: 'Use OpenMP',
)

option(
    'blas_vendor',
    type: 'string',
    description : 'BLAS library to be used if `la_backend=custom`'
)

option(
    'lapack_vendor',
    type: 'string',
    description : 'LAPACK library to be used if `la_backend=custom`'
)

option(
    'lapacke_vendor',
    type: 'string',
    description : 'LAPACKe library to be used if `la_backend=custom`'
)

option(
    'tests',
    type: 'boolean',
    value: true,
    description: 'Include tests',
)