
option(
    'la_backend',
    type: 'combo',
    value: 'openblas+netlib',
    choices: ['openblas+netlib', 'openblas64+netlib64', 'netlib', 'mkl', 'custom'],
    description : 'linear algebra backend'
)

option(
    'la_libraries',
    type: 'array',
    description : 'Custom libraries to be used if `la_backend=custom`'
)

option(
    'openmp',
    type: 'boolean',
    value: true,
    description: 'Use OpenMP',
)

option(
    'tests',
    type: 'boolean',
    value: true,
    description: 'Include tests',
)