srcs += files(
    'utils/base_parser.c',
    'utils/experimental_quantity.c',
    'utils/fchk_parser.c',
    'utils/lexer.c',
    'utils/matrix.c',
    'utils/molden_parser.c',
    'utils/permutations.c',
    'basis.c',
    'context.c',
    'integrals.c',
    'logging.c',
    'property.c',
    'response.c',
    'wavefunction.c',
)